--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
   "settings": {
@@ -26,6 +27,7 @@
   "rules": {
     "no-console": ["error", { "allow": ["warn", "error"] }],
     "semi": ["error", "never"],
+    "arrow-parens": ["error", "as-needed"],
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "jsx-quotes": ["error", "prefer-single"],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
