--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,9 +26,12 @@
   "plugins": ["react"],
   "rules": {
     "no-console": ["error", { "allow": ["warn", "error"] }],
+    "object-curly-newline": ["off", "multi-line"],
     "semi": ["error", "never"],
+    "max-len": ["error", 150, { "ignoreTemplateLiterals": true }],
     "arrow-parens": ["error", "as-needed"],
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
     "jsx-quotes": ["error", "prefer-single"],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "comma-dangle": ["error", "never"],
