--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "color-hex-case": "upper",
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "selector-type-no-unknown": null
   }
 }
