--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,7 +6,11 @@
   ],
   "rules": {
     "color-hex-case": "upper",
+    "value-keyword-case": ["lower", { "ignoreKeywords": ["dummyValue"] }],
     "no-descending-specificity": null,
-    "selector-type-no-unknown": null
+    "selector-type-no-unknown": null,
+    "selector-descendant-combinator-no-non-space": null,
+    "declaration-colon-newline-after": null,
+    "declaration-empty-line-before": null
   }
 }
