--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "statements": 80,
-        "branches": 80,
-        "functions": 80,
-        "lines": 80
+        "statements": 70,
+        "branches": 70,
+        "functions": 70,
+        "lines": 70
       }
     }
   },
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.2.1",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
     "eslint": "^6.8.0",
