--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,6 +11,7 @@
     "selector-type-no-unknown": null,
     "selector-descendant-combinator-no-non-space": null,
     "declaration-colon-newline-after": null,
-    "declaration-empty-line-before": null
+    "declaration-empty-line-before": null,
+    "property-no-vendor-prefix": null
   }
 }
